--- a/Telegraph/Telegram.entitlements
+++ b/Telegraph/Telegram.entitlements
@@ -24,7 +24,7 @@
 		<string>iCloud.ph.telegra.Telegraph</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
-	<string>$(TeamIdentifierPrefix)ph.telegra.Telegraph</string>
+	<string>$(TeamIdentifierPrefix)it.eantropov.Telegraph</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.ph.telegra.Telegraph</string>
