--- a/Widget/Widget.entitlements
+++ b/Widget/Widget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.org.telegram.TelegramEnterprise</string>
+		<string>group.it.eantropov.TelegramEnterprise</string>
 	</array>
 </dict>
 </plist>
