--- a/Telegraph/Telegram.entitlements
+++ b/Telegraph/Telegram.entitlements
@@ -11,7 +11,7 @@
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.ph.telegra.Telegraph</string>
+		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -21,13 +21,13 @@
 	<true/>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.ph.telegra.Telegraph</string>
+		<string>iCloud.$(CFBundleIdentifier)</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)it.eantropov.Telegraph</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.ph.telegra.Telegraph</string>
+		<string>group.it.eantropov.TelegramEnterprise</string>
 	</array>
 </dict>
 </plist>
